security/network-policies/allow-order-to-aiops.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-order-to-aiops
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ai-ops-service
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: order-service
      ports:
        - protocol: TCP
          port: 8000
